# tscreen

./: CMakeLists.txt  HACKING  INSTALL  README  wscript
cmake/: config.h.cmake
cmake/Modules/: FindPAM.cmake  Tscreen.cmake  TscreenBuildOptions.cmake  TscreenPlatformChecks.cmake
data/: CMakeLists.txt  tscreen.bashcomp  tscreen.zshcomp  tscreenrc
debian/: changelog  control  dirs  docs  info  init  manpages  postinst  postrm  prerm  rules
doc/: CMakeLists.txt  FAQ  tscreen.1.cmake  tscreen.info.cmake  tscreen.texinfo
src/: CMakeLists.txt  acls.c  acls.h  ansi.c  ansi.h  attacher.c  comm.c  comm.sh  display.c  display.h  encoding.c  extern.h  fileio.c  help.c  image.h  input.c  kmapdef.sh  layer.c  layer.h  loadav.c  logfile.c  logfile.h  mark.c  mark.h  misc.c  os.h  osdef.h.in  osdef.sh  process.c  pty.c  putenv.c  resize.c  sched.c  sched.h  screen.c  screen.h  search.c  socket.c  teln.c  term.sh  (+5 more)
